--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.miwok">
+    package="com.example.android.learnchinese">
 
     <application
         android:allowBackup="true"
@@ -22,20 +22,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.android.learnchinese.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NumbersActivity"
+        <activity android:name="com.example.android.learnchinese.NumbersActivity"
             android:label="@string/category_numbers"/>
-        <activity android:name=".PhrasesActivity"
+        <activity android:name="com.example.android.learnchinese.PhrasesActivity"
             android:label="@string/category_phrases"/>
-        <activity android:name=".FamilyActivity"
+        <activity android:name="com.example.android.learnchinese.FamilyActivity"
             android:label="@string/category_family"/>
-        <activity android:name=".ColorsActivity"
+        <activity android:name="com.example.android.learnchinese.ColorsActivity"
             android:label="@string/category_colors"></activity>
     </application>
 
