--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             android:label="@string/category_family"/>
         <activity android:name="com.example.android.learnchinese.ColorsActivity"
             android:label="@string/category_colors"></activity>
+        <activity android:name="com.example.android.learnchinese.FoodsActivity"
+            android:label="Foods"></activity>
     </application>
 
 </manifest>
